# Muninn-Faster-Whisper

./: .gitignore  .gitmodules  CMakeLists.txt  DEPENDENCIES.md  GETTING_STARTED.md  LICENSE  MIGRATION_PLAN.md  PROJECT_STATUS.md  README.md  SESSION_SUMMARY.md  SETUP.md  TODO.md  convert_pyannote_to_onnx.py  ctranslate2_shutdown_fix.patch  humanizer.py  setup_dependencies.bat
docs/: CANCELLATION_API.md  DIARIZATION_SETUP.md  INTEGRATION.md  SPEAKER_DIARIZATION.md  SUBTITLE_EXPORT.md  TRANSLATION.md  TRANSLATION_DESIGN.md  VAD_API.md  VAD_AUTO_DETECTION.md
examples/: basic_transcription.cpp  translation_example.cpp  translation_streaming.cpp
include/muninn/: audio_extractor.h  diarization.h  export.h  mel_spectrogram.h  silero_vad.h  subtitle_export.h  transcriber.h  translator.h  types.h  vad.h
lib/include/: heimdall.h
src/: audio_extractor.cpp  diarization.cpp  mel_spectrogram.cpp  silero_vad.cpp  subtitle_export.cpp  transcriber.cpp  translator.cpp  vad.cpp
src/audio/: audio_decoder.cpp  audio_decoder.h
tests/: muninn_test_app.cpp  test_audio_extraction.cpp  test_translation.cpp  test_utf8_output.cpp
